--- a/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
+++ b/translations/kangyur/translations/072-038_toh338-classification_of_acts.xml
@@ -24,7 +24,7 @@
         <sponsor xml:id="UT22084-072-038-1512">Late Ng Ah Chon, Late Lee Tiang Chuan, Lee Cheng Watt and family, Late Lee Cheng Boon &amp; family, Lee Boon Tee &amp; family, Lee Pheck Tiang &amp; family, Lee Pheck Choo and family, Lee Siang Choo &amp; family.</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.1.1 <date>2023</date>
+                <edition>v 1.1.3 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -191,6 +191,12 @@
                 </change>
                 <change who="#john" when="2023-09-14T16:04:11.464Z" type="text-version" status="1.1.1" xml:id="UT22084-072-038-1555">
                     <desc>Edited introduction to modify mentions of the third non-Degé version, which is not only in Shelkar but other Kangyurs.</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.1.2" xml:id="UT22084-072-038-1556">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T21:19:31.487Z" type="text-version" status="1.1.3" xml:id="UT22084-072-038-1557">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -1016,7 +1022,7 @@
             <!--[813]--> being happy when others are praised; building stūpas and monasteries in
             commemoration of the Bhagavān;<note place="end" xml:id="UT22084-072-038-129"> We have
               supplied the word “commemoration” here to form an intelligible English sentence. The
-              Tibetan reads, “Erecting a stūpa of/for the Bhagavān” (<foreign xml:lang="Bo-Ltn" type="quote">bcom ldan ’das kyi mchod rten . . . brtsigs pa</foreign>). The Sanskrit
+              Tibetan reads, “Erecting a stūpa of/for the Bhagavān” (<foreign xml:lang="Bo-Ltn" type="quote">bcom ldan ’das kyi mchod rten … brtsigs pa</foreign>). The Sanskrit
               expresses a causative sense (-<foreign xml:lang="Sa-Ltn" type="term">kārāpaṇa</foreign>, “causing to be built”): “commissioning the building of shrines
               and stūpas [in commemoration] of the Bhagavān” (<foreign xml:lang="Sa-Ltn" type="quote">bhagavānaś caityastūpa­kārāpaṇaṃ</foreign>).</note> turning away from
             what is vile, from what is lacking Dharma, and from the roots of demerit; encouraging
@@ -1438,7 +1444,7 @@
                         <p tid="107">“ ‘The Bhagavān said to Ānanda, “Ānanda, either an action done by a person in
               a previous lifetime resurfaces and becomes present, or it becomes the force that leads
               to wrong views at the time of death.” ’<note place="end" xml:id="UT22084-072-038-202">
-                Tentative translation. Presumably, the reader is supposed to supply “. . . leads to
+                Tentative translation. Presumably, the reader is supposed to supply “…leads to
                 rebirth in the realm of ghosts.” The quotation nevertheless remains cryptic, and its
                 connection to the theme of the paragraph is unclear. </note>
           </p>
@@ -1678,7 +1684,7 @@
           <p tid="121">“For example, when King Ajātaśatru heard that he would go to the Avīci
               hell<note place="end" xml:id="UT22084-072-038-241"> On the Avīci hell, see Guenther
               1986, pp. 58–59: “The torture of the denizens of the mNar.med (Avīci) hell consists in
-              being thrust into huge iron kettles filled with molten [. . .] bronze or copper from
+              being thrust into huge iron kettles filled with molten […] bronze or copper from
               vast cauldrons and then being boiled over an unbearably hot fire. As has been written:
                   <q>
                                 <p>Some are cast into iron kettles,</p>
@@ -1736,7 +1742,7 @@
           <p tid="123">“What kind of action leads to a predetermined rebirth? As for that, a person
             carries out an action, and, by dedicating the action in a certain way—‘May I be reborn as
             such a one!’—that person will be reborn as that one.<note place="end" xml:id="UT22084-072-038-251"> According to the Tibetan. The Sanskrit reads “there”
-              instead of “such a one” (Sanskrit <foreign xml:lang="Sa-Ltn" type="quote">amutra . . .
+              instead of “such a one” (Sanskrit <foreign xml:lang="Sa-Ltn" type="quote">amutra …
                 tatra</foreign>).</note> For example, in the <title xml:lang="Sa-Ltn">Śyāmākajātaka</title>,<note place="end" xml:id="UT22084-072-038-252"> This is the
               spelling in the Sanskrit manuscripts. For the <title xml:lang="Sa-Ltn">Śyāmākajātaka</title> (= <title xml:lang="Bo-Ltn">dkar sham kyi skyes pa’i
                 rabs</title>), see Kudo 2004, pp. 250–51, n. 23. </note> the Bhagavān relates
@@ -2040,7 +2046,7 @@
               (“[Maitrakanyaka saw that hell being] for whom a [meagre] rest of the life force was
               preserved only by the food of blood and liquor oozing from his own head”).</note> Then
             this man died there. Maitrāyajña, terrified and distraught, made this aspiration<note place="end" xml:id="UT22084-072-038-324"> According to the Tibetan. The Sanskrit
-              differs: “With his whole being he prostrated to his parents and said . . .” (<foreign xml:lang="Sa-Ltn" type="quote">sarveṇa bhāvena mātāpitroḥ praṇipātaṃ
+              differs: “With his whole being he prostrated to his parents and said…” (<foreign xml:lang="Sa-Ltn" type="quote">sarveṇa bhāvena mātāpitroḥ praṇipātaṃ
                 kṛtvāha</foreign>; Kudo 2004, p. 104).</note> for the sake of his mother:</p>
           <milestone unit="chunk" xml:id="UT22084-072-038-325"/>
           <lg tid="158">
@@ -2274,7 +2280,7 @@
                 <foreign xml:lang="Sa-Ltn" type="quote">adyāpi</foreign> (Lévi 1932, p. 59).</note>
             ordination is not given without parents’ consent.<note place="end" xml:id="UT22084-072-038-372"> K<hi rend="subscript">Y</hi>, K, C, and N read <foreign xml:lang="Bo-Ltn" type="quote">nga chung yang pha mas ma gnang na/bar rab tu mi
                 dbyung ste</foreign>; D: <foreign xml:lang="Bo-Ltn" type="quote">da dung
-                yang . . .</foreign>
+                yang …</foreign>
                         </note> Or, for example, it is
             said that when the Bhagavān himself adopted the life of a mendicant, his parents went
             blind out of grief for the loss of King Śuddhodana’s son,<note place="end" xml:id="UT22084-072-038-374"> According to the reading of D: <foreign xml:lang="Bo-Ltn" type="quote">mig rub par gyur pa lta bu’i pha mas</foreign>. K<hi rend="subscript">Y</hi>, K, and N read <foreign xml:lang="Bo-Ltn" type="quote">mig
@@ -2355,7 +2361,7 @@
               repaying their parents’ kindness. And that is precisely what preceptors and teachers
               do!’<note place="end" xml:id="UT22084-072-038-392"> This paragraph was translated
                 according to the Sanskrit <foreign xml:lang="Sa-Ltn" type="quote">yaś ca
-                  punar</foreign> [. . .] <foreign xml:lang="Sa-Ltn" type="quote">evaṃ mātrāpitṝṇāṃ
+                  punar</foreign> […] <foreign xml:lang="Sa-Ltn" type="quote">evaṃ mātrāpitṝṇāṃ
                   putraiḥ pratyupakāraḥ kṛto bhavati</foreign> (Lévi 1932, 61,2–5). The Tibetan is
                 unclear and does not seem to fit the context: “It is said that if someone makes
                 someone else develop faith in the Buddha, the Dharma, and the Saṅgha, establishes
@@ -2800,7 +2806,7 @@
               It is not clear, or not known to us, what exactly “the ten kinds of external things”
               refers to. The <title xml:lang="Sa-Ltn">Abhidharmakośabhāṣya</title> mentions eleven
               tangible things in connection with the skandha of matter (“things that have the nature
-              of being tangible”): <foreign xml:lang="Sa-Ltn" type="quote">spṛśyamekādaśātmakam</foreign> [. . .] <foreign xml:lang="Sa-Ltn" type="quote">spraṣṭavyamekādaśadravyasvabhāvam | catvāri mahābhūtāni ślakṣṇatvaṃ karkaśatvaṃ
+              of being tangible”): <foreign xml:lang="Sa-Ltn" type="quote">spṛśyamekādaśātmakam</foreign> […] <foreign xml:lang="Sa-Ltn" type="quote">spraṣṭavyamekādaśadravyasvabhāvam | catvāri mahābhūtāni ślakṣṇatvaṃ karkaśatvaṃ
                 gurutvaṃ laghutvaṃ śītaṃ jighatsā pipāsā ceti</foreign> (Abhid–k–bh 7,9–10 ad AKK
                 I.10b).<ref rend="pending" target="https://read.84000.co/translation/toh4089.html"/>
               <ref rend="pending" target="https://read.84000.co/translation/toh4090.html"/> It seems
@@ -2861,7 +2867,7 @@
               Kālodāyin<note place="end" xml:id="UT22084-072-038-493"> Reading N <foreign xml:lang="Bo-Ltn" type="quote">nag po ’char ldan gyi tshe rabs</foreign> (see Lévi
               1932, p. 78, n. 5) instead of D <foreign xml:lang="Bo-Ltn" type="quote">nag po ’char
                 ldan gyis tshe rabs</foreign>. </note> in his former rebirth in Devāvataraṇa.<note place="end" xml:id="UT22084-072-038-494"> According to the Sanskrit. The Tibetan is
-              not clear. Kudo (2004, p. 304, n. 66) writes “In this section [. . .], three avadānas
+              not clear. Kudo (2004, p. 304, n. 66) writes “In this section […], three avadānas
               are referred to: the avadānas of Śvaprapada, Susudhī, and Kālodāyin,” which is true
               for the Sanskrit text. However, the references in the Sanskrit are unclear, and the
               Tibetan is not very clear either. There are no equivalents for the Sanskrit names
@@ -3853,7 +3859,7 @@
           <bibl xml:id="UT22084-072-038-689">
                         <title xml:lang="Bo-Ltn">sher phyin khri brgyad stong
               pa</title> (<title xml:lang="Sa-Ltn">Aṣṭādaśasāhasrikāprajñāpāramitā</title>). Toh 10,
-            Degé Kangyur vol. 29–31 (shes phyin, ka–ga), folios 1.a (ka)–206.a (ga). English
+            Degé Kangyur vol. 29–31 (shes phyin, khri brgyad, ka–ga), folios 1.a (ka)–206.a (ga). English
             translation in Sparham 2022.</bibl>
           <bibl xml:id="UT22084-072-038-690">Vasubandhu. <title xml:lang="Bo-Ltn">chos mngon pa’i
               mdzod kyi tshig le’ur byas pa</title> (<title xml:lang="Sa-Ltn">Abhidharmakośakārikā</title>). Toh 4089, Degé Tengyur vol. 140 (mngon pa, ku), folios
@@ -5394,7 +5400,7 @@
                 the basis of which seems to be feelings of jealousy and anger. Edgerton translates
                   <foreign xml:lang="Sa-Ltn" type="term">pradāsa</foreign> as “envious rivalry”
                 (BSHD, s.v. “pradāsa”). In Pāli commentaries it is defined as “yugaggāha
-                [imperiousness], grasping after preëminence for oneself over others, [. . .]
+                [imperiousness], grasping after preëminence for oneself over others, […]
                 primarily, concealment of the good qualities of others, jealous disparagement, nasty
                 disposition, ill-will” (BHSD, s.v. “mrakṣa”). </p>
                             </note>
@@ -5707,7 +5713,7 @@
                             <note type="definition">
                                 <p>
                                     <foreign xml:lang="Bo-Ltn" type="term">gtsug lag</foreign>
-                generally refers to a “sacred science or text, (relevant to the <foreign xml:lang="Sa-Ltn" type="term">ṛṣi</foreign>) [. . .] or further, sciences or texts
+                generally refers to a “sacred science or text, (relevant to the <foreign xml:lang="Sa-Ltn" type="term">ṛṣi</foreign>) […] or further, sciences or texts
                 of the brahmans” from which the sense of <distinct>treatise</distinct> (<foreign xml:lang="Sa-Ltn" type="term">śāstra</foreign>) is derived. In Buddhism, <foreign xml:lang="Bo-Ltn" type="term">gtsug lag</foreign> is defined broadly as <foreign xml:lang="Bo-Ltn" type="term">gsung rab</foreign> (“scriptures”), <foreign xml:lang="Bo-Ltn" type="term">gzhung lugs</foreign> (“treatises”), and <foreign xml:lang="Bo-Ltn" type="term">dam chos</foreign> (“the sacred Dharma”) (see R. A.
                 Stein’s <title xml:lang="la">Tibetica Antiqua</title> III in McKeown
                 2010, pp. 126–29). Here it refers particularly to the teachings (scriptures,
@@ -6085,7 +6091,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">maitreya</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">byams pa</term>
                             <term xml:lang="bo" type="attestedSource" n="1">བྱམས་པ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The Buddha of the future, i.e., the fifth Buddha of the
                 Fortunate Eon or Bhadrakalpa.</p>
                             </note>
@@ -6288,8 +6294,8 @@
                         <gloss type="place" xml:id="UT22084-072-038-943">
                             <term type="translationMain">Benares</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">vārāṇasī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ba ra na si</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">བ་ར་ན་སི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">bA rA Na sI</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">བཱ་རཱ་ཎ་སཱི།</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="2">ka shi</term>
                             <term xml:lang="bo" type="attestedSource" n="2">ཀ་ཤི།</term>
                         </gloss>
@@ -6363,8 +6369,8 @@
                         <gloss type="place" xml:id="UT22084-072-038-949">
                             <term type="translationMain">Magadha</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">magadha</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ga dha</term>
-                            <term xml:lang="bo" type="attestedSource" n="1">མ་ག་དྷ།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1">ma ga dhA</term>
+                            <term xml:lang="bo" type="attestedSource" n="1">མ་ག་དྷཱ།</term>
                             <note type="definition">
                                 <p>One (the largest) of the sixteen states (Skt./Pāli <foreign xml:lang="Sa-Ltn" type="term">mahājanapada</foreign>) in ancient India from the
                 sixth to the third century <hi rend="small-caps">bce</hi>.</p>
@@ -6413,7 +6419,7 @@
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">rājagṛha</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1">rgyal po’i khab</term>
                             <term xml:lang="bo" type="attestedSource" n="1">རྒྱལ་པོའི་ཁབ།</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>The capital of the state of Magadha during the Buddha’s
                 lifetime.</p>
                             </note>
