--- a/translations/kangyur/translations/072-039_toh339-dharma_scripture_exposition_of_karma.xml
+++ b/translations/kangyur/translations/072-039_toh339-dharma_scripture_exposition_of_karma.xml
@@ -27,7 +27,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-072-039-709">Andreas Doctor</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.2.1 <date>2023</date>
+                <edition>v 1.2.3 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -177,6 +177,12 @@
                 </change>
                 <change who="#john" when="2023-09-14T15:59:54.794Z" type="text-version" status="1.2.1" xml:id="UT22084-072-039-744">
                     <desc>Edited introduction to modify mentions of the third non-Degé version, which is not only in Shelkar but other Kangyurs.</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.2.2" xml:id="UT22084-072-039-745">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T21:20:23.901Z" type="text-version" status="1.2.3" xml:id="UT22084-072-039-746">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -451,7 +457,7 @@
                         eventually becomes a lay follower. </p>
                     <milestone unit="chunk" xml:id="UT22084-072-039-47"/>
                     <p tid="30">Walter Simon noted three distinguishing features of Tib-3 in comparison to Toh 338 and 339: (1) “the
-                        preservation . . . of the ‘introductory tale,’ ” (2) the absence of the “illustrative stories,” and (3) “the inclusion of . . . a 
+                        preservation … of the ‘introductory tale,’ ” (2) the absence of the “illustrative stories,” and (3) “the inclusion of … a 
                         table of contents.” These features, he wrote, “point to an earlier Sanskrit original.”<note place="end" xml:id="UT22084-072-039-48"> Simon 1970, 161. 
                         These characteristics seem to be shared by all the witnesses of the
                         of the <title xml:lang="Sa-Ltn">Karma­vibhaṅga</title> mentioned above in <ptr target="#UT22084-072-039-46"/>. </note>
@@ -525,7 +531,7 @@
                             don’t think that anyone in Japan has raised the question whether D 339 [the <title xml:lang="Bo-Ltn">las kyi rnam par
                                 ’gyur ba zhes bya ba’i chos kyi gzhung</title>] is a translation from China, which might indicate that there are no
                             obvious giveaways. Also, Ch-1, Ch-2 and Ch-3 are too different from D 339; Ch-4 and Ch-6 were translated into Chinese at a
-                            very late stage when there was virtually no known cultural exchange between Tibet and China,” (May 29, 2017), and “[. . .]
+                            very late stage when there was virtually no known cultural exchange between Tibet and China,” (May 29, 2017), and “[…]
                             among the Chinese translations, Taishō no. 80 is the closest to D 339 but not close enough for a direct relationship. And
                             I totally agree that D 339’s language is pre-reform and very idiosyncratic,” (June 1, 2017). For a complete list of the
                             Chinese translations, see Kudo 2004, Bibliography, p. xx. We are very grateful to Mr. Yi Ding (Stanford University) for
@@ -636,7 +642,7 @@
                             “brahmin youth.”</note>--> ask whatever you like! I will answer.”</p>
                     <p tid="155">Then the brahmin youth Śuka, the son of Taudeya, asked the Bhagavān the following question: “Sir<note place="end" xml:id="UT22084-072-039-87"> Tibetan <foreign xml:lang="Bo-Ltn" type="term">kye</foreign> here probably translates the
                             Middle Indic/Buddhist Sanskrit expression <foreign xml:lang="Sa-Ltn" type="term">bho</foreign> (contracted form of the
-                            vocative of Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavant</foreign>; cf. PED, s.v. <foreign xml:lang="Sa-Ltn" type="term">bho</foreign>: “sir, friend, you, my dear [. . . ].”</note> Gautama, there are many types of sentient
+                            vocative of Sanskrit <foreign xml:lang="Sa-Ltn" type="term">bhagavant</foreign>; cf. PED, s.v. <foreign xml:lang="Sa-Ltn" type="term">bho</foreign>: “sir, friend, you, my dear [… ].”</note> Gautama, there are many types of sentient
                         beings, such as beings who have a short lifespan or a long lifespan, have many illnesses or few illnesses, are ugly or
                         beautiful, have little power or are powerful, are highborn or lowborn, are poor or rich, are ignorant of the Dharma,<note place="end" xml:id="UT22084-072-039-88"> Tibetan <foreign xml:lang="Bo-Ltn" type="term">ngan pa</foreign> in this context
                             means “ignorant” or being without knowledge or understanding of the Dharma and—more specifically in this context of the
@@ -706,7 +712,7 @@
                                 Naraka, les animaux, les Yaxas, les rôdeurs, les Asuras, etc. Ceux qui ont fait des actes blancs renaissent parmi les
                                 dieux et les hommes.</foreign>) It is noteworthy that this particular Tibetan translation deviates strongly from
                             parallel passages in related texts in Sanskrit and Pāli, respectively: <foreign xml:lang="Sa-Ltn" type="quote">karma
-                                māṇava satvān vibhajati. yad idaṃ hīnotkṛṣṭamadhyamatāyām. tadyathā</foreign> . . . . (Mh-karmav paragraph 30); <foreign xml:lang="Pi-Ltn" type="quote">Kammaṃ satte vibhajati yadidaṃ hīnappaṇītatāyāti</foreign> (MN III, 203). Both of these
+                                māṇava satvān vibhajati. yad idaṃ hīnotkṛṣṭamadhyamatāyām. tadyathā</foreign> … . (Mh-karmav paragraph 30); <foreign xml:lang="Pi-Ltn" type="quote">Kammaṃ satte vibhajati yadidaṃ hīnappaṇītatāyāti</foreign> (MN III, 203). Both of these
                             may be translated as “Living beings are differentiated by their actions, namely, [with regard to their] inferiority or
                             superiority.” (Sanskrit adds “mediocrity.”) The diction in the Shelkar (London) Kangyur (L 353b,2–3) version of the
                             related <title xml:lang="Sa-Ltn">Karma­vibhaṅga</title> (Toh 338) is clearer: <foreign xml:lang="Bo-Ltn" type="quote">sems can rnams kyi las sna tshogs dang| nyon mongs pa sna tshogs dang| lta ba sna tshogs dang| spyod pa sna tshogs
@@ -867,7 +873,7 @@
                             The preferable reading, however, seems to be that of C, H, S, Z: <foreign xml:lang="Bo-Ltn" type="term">’thab mo</foreign>
                             “quarrel, fight; battle.” Z, moreover, has just <foreign xml:lang="Bo-Ltn" type="quote">’thab mo la lta zhing dad pa
                                 dang|</foreign>. Feer’s (incorrect) translation (1883, 256) may result from reading <foreign xml:lang="Bo-Ltn" type="term">thab</foreign> (<foreign xml:lang="Bo-Ltn" type="term">mo</foreign>) without considering the vv.ll.:
-                            “Having one’s desires and one’s view focused on the hearth (where the meat is cooking?) . . .” (<foreign xml:lang="fr" type="quote">porter ses désirs et ses regards sur le foyer (où cuit la viande?) . . .</foreign>). </note> Through
+                            “Having one’s desires and one’s view focused on the hearth (where the meat is cooking?) …” (<foreign xml:lang="fr" type="quote">porter ses désirs et ses regards sur le foyer (où cuit la viande?) …</foreign>). </note> Through
                         these ten factors, one’s lifespan will be shortened, and one will suffer many illnesses. </p>
                     <milestone unit="chunk" xml:id="UT22084-072-039-133"/>
                     <p tid="56"><!--2.-->“How can one achieve a long life through carrying out good actions? Ten factors lead to a long life. What are
@@ -890,7 +896,7 @@
                             “monks and nuns” for a discussion of this term and a possible literal meaning. Vv.ll. L <foreign xml:lang="Bo-Ltn" type="quote">mya ngan sring ba rnams</foreign>; S, Z <foreign xml:lang="Bo-Ltn" type="quote">mya ngan srid pa
                                 rnams</foreign>. </note> (7) feeling joy about one’s enemies falling ill; <ref cRef="F.301.a" type="folio" xml:id="UT22084-072-039-666"/> (8) feeling joy when one’s enemies do not recover from an illness; (9) giving them the
                         wrong medicine; and (10) eating indigestible food.<note place="end" xml:id="UT22084-072-039-138"> Tibetan <foreign xml:lang="Bo-Ltn" type="quote">zas mi zhu ba za ba</foreign>. However, cf. a very similar passage in the Sanskrit text
-                            of the Mh-karmav, paragraph 4, (Lévi 1932, 37): “giving [someone] indigestible foods ([ . . .-]<foreign xml:lang="Sa-Ltn" type="term">pradānaṃ tathāparijīrṇabhojanaṃ</foreign>).” </note> These are the ten. Through these
+                            of the Mh-karmav, paragraph 4, (Lévi 1932, 37): “giving [someone] indigestible foods ([…-]<foreign xml:lang="Sa-Ltn" type="term">pradānaṃ tathāparijīrṇabhojanaṃ</foreign>).” </note> These are the ten. Through these
                         ten factors, one will have many illnesses.</p>
                     <milestone unit="chunk" xml:id="UT22084-072-039-139"/>
                     <p tid="58"><!--4.-->“How will one have few illnesses through carrying out good actions? Ten factors lead to having few illnesses.
@@ -1013,7 +1019,7 @@
                             1932, 38) means “ridiculing someone.” </note> and (10) being uncleanly.<note place="end" xml:id="UT22084-072-039-155">
                             This is a free translation of Tibetan <foreign xml:lang="Bo-Ltn" type="quote">ci la yang mi gtsang bar byed pa|</foreign>,
                             literally “making everything dirty.” </note> These are the ten factors.<note place="end" xml:id="UT22084-072-039-156"> The
-                            sentence “Through [the presence of] these ten factors one will . . .,” is omitted here (<foreign xml:lang="Bo-Ltn" type="term">chos ’di bcus</foreign> . . . <foreign xml:lang="Bo-Ltn" type="term">-r’gyur ro</foreign>). </note>
+                                sentence “Through [the presence of] these ten factors one will…,” is omitted here (<foreign xml:lang="Bo-Ltn" type="term">chos ’di bcus</foreign> … <foreign xml:lang="Bo-Ltn" type="term">-r’gyur ro</foreign>). </note>
                     </p>
                     <milestone unit="chunk" xml:id="UT22084-072-039-157"/>
                     <p tid="60"><!--6.-->“In what way does action lead to being beautiful?<note place="end" xml:id="UT22084-072-039-158"> Feer (1883,
@@ -1376,10 +1382,10 @@
                             Interestingly, this category is absent from Summary of the Fifty-one Karma Categories in <ptr target="#UT22084-072-039-122"/>–<ptr target="#UT22084-072-039-322"/>.<!-- Part I, chapter two-->
                         </note> Ten factors lead to rebirth as a deva in one of the six heavens of sensuous pleasure. By not violating, and remaining
                         diligently committed<note place="end" xml:id="UT22084-072-039-240"> Tibetan <foreign xml:lang="Bo-Ltn" type="quote">brtson
-                                ’grus su bsdams pas</foreign>, literally perhaps “By being bound/tied to diligence/perseverance, . . . .” Feer (1883,
+                            ’grus su bsdams pas</foreign>, literally perhaps “By being bound/tied to diligence/perseverance,….” Feer (1883,
                             261f.): “If one does not deviate from the path of the ten virtues, and (moreover) one remains firmly attached to
-                            heroism, . . . (<foreign xml:lang="fr" type="quote">Si l’on ne s’écarte pas du chemin des dix vertus, et que (de plus) on
-                                reste attaché fermement à I’héroisme,</foreign> . . .).</note> to, the ten virtuous courses of action, one will be
+                            heroism, … (<foreign xml:lang="fr" type="quote">Si l’on ne s’écarte pas du chemin des dix vertus, et que (de plus) on
+                                reste attaché fermement à I’héroisme,</foreign>…).</note> to, the ten virtuous courses of action, one will be
                         reborn as a deva in one of the six heavens of sensuous pleasure.</p>
                     <milestone unit="chunk" xml:id="UT22084-072-039-241"/>
                     <p tid="75"><!--21.-->“In what way does action lead to rebirth as a deva possessing a physical body? Ten factors lead to rebirth
@@ -1477,7 +1483,7 @@
                                 deśāntaravipākaṃ</foreign>). Feer (1883, 264) seems to have misinterpreted this paragraph (<foreign xml:lang="fr" type="quote">Le Buddha est convenable; la Loi est convenable; la Confrérie est convenable; il est convenable de se
                                 rendre complètement maître de la moralité. Quand on a bien réfléchi de manière à croire complètement ces (quatre
                                 propositions), qu’on a fait des dons et formulé un voeu pour un autre pays, que tous les actes qu’on a accomplis sont
-                                convenables, bons, que les mauvais deviennent blancs, quand il en est ainsi . . . c’est par de tels actes que l’on va
+                                convenables, bons, que les mauvais deviennent blancs, quand il en est ainsi … c’est par de tels actes que l’on va
                                 dans un autre pays et qu’on s’y mûrit complètement.</foreign>) This alludes to the famous story of the sea merchant’s
                             son Maitrāyajña, or Maitrakanyaka in the Sanskrit <foreign type="term" xml:lang="Sa-Ltn">avadāna</foreign> literature and
                             Mittavindika in the Pāli <foreign xml:lang="Pi-Ltn" type="term">jātakas</foreign>), who travels the sea with his friends
@@ -1555,8 +1561,8 @@
                     <p tid="93"><!--33.-->“What kind of action, when accumulated, leads a person to be unhappy at first, and happy in the future as a
                         karmic result?<note place="end" xml:id="UT22084-072-039-289"> The Tibetan here reads <foreign xml:lang="Bo-Ltn" type="quote">las kyi ’bras bu ni gang yin zhe na</foreign> (“What is the karmic result?”) instead of <foreign xml:lang="Bo-Ltn" type="quote">las gang yin zhe na as in the previous sentences.</foreign>text here deviates from the usual sentence
                             structure.</note> Suppose one makes an offering without faith at first, but later one’s mind grows faithful and one feels
-                            elated.<note place="end" xml:id="UT22084-072-039-290"> Translated according to D, L: <foreign xml:lang="Bo-Ltn" type="quote">dad cing rangs pa’i sems phyis skyes pa’i</foreign> [. . .]. V.l. K<hi rend="subscript">Y</hi>, J, K<hi rend="subscript">Q</hi>, N, C <foreign xml:lang="Bo-Ltn" type="quote">dad cing rangs pa sems yid la skyes
-                                pa’i</foreign> [. . .].</note> If one is reborn as a human, one will be born into a poor family. Food and possessions
+                            elated.<note place="end" xml:id="UT22084-072-039-290"> Translated according to D, L: <foreign xml:lang="Bo-Ltn" type="quote">dad cing rangs pa’i sems phyis skyes pa’i</foreign> […]. V.l. K<hi rend="subscript">Y</hi>, J, K<hi rend="subscript">Q</hi>, N, C <foreign xml:lang="Bo-Ltn" type="quote">dad cing rangs pa sems yid la skyes
+                                pa’i</foreign> […].</note> If one is reborn as a human, one will be born into a poor family. Food and possessions
                         will be scarce. From a state of being distressed and without food and clothing, one will later become powerful, wealthy, and
                         happy, and everything will increase. A person who has thus come to lack nothing<note place="end" xml:id="UT22084-072-039-291">
                             Translation follows D <foreign xml:lang="Bo-Ltn" type="term">cis kyang</foreign>; v.l. K<hi rend="subscript">Y</hi>, K<hi rend="subscript">Q</hi>
@@ -1727,9 +1733,9 @@
                             Yongle, K<hi rend="subscript">Q</hi>
                             <foreign xml:lang="Bo-Ltn" type="term">nad rkong</foreign>. According to LC, s.v. <foreign xml:lang="Bo-Ltn" type="term">rkong pa</foreign> = <foreign xml:lang="Bo-Ltn" type="term">za rkong</foreign> which, according to an entry in dag
                             yig: “<foreign xml:lang="Bo-Ltn" type="quote">za ’phrug che ba’i pags nad ’brum bu can zhig gi ming ste/ yul skad la lar
-                                yang zer/</foreign>. a skin disease. [. . .]” is some form of skin disease accompanied by strong itching and skin
+                                yang zer/</foreign>. a skin disease. […]” is some form of skin disease accompanied by strong itching and skin
                             eruptions/pustules. See also BGT, s.v. (1) <foreign xml:lang="Bo-Ltn" type="term">rkong</foreign>: <foreign xml:lang="Bo-Ltn" type="quote">pags par za ’phrug skye ba’i nad cig</foreign>, “a certain disease that causes itching
-                            of (on) the skin.” Cf. also Jäschke, s.v. <foreign xml:lang="Bo-Ltn" type="term">rkong pa</foreign>: “itch; [. . .] Others
+                            of (on) the skin.” Cf. also Jäschke, s.v. <foreign xml:lang="Bo-Ltn" type="term">rkong pa</foreign>: “itch; […] Others
                             describe it as a scabby eruption of the skin, chiefly affecting animals, but occasionally also men.” The Sanskrit
                             equivalents (<foreign xml:lang="Sa-Ltn" type="term">dadru</foreign>, <foreign xml:lang="Sa-Ltn" type="term">dadrū</foreign>, <foreign xml:lang="Sa-Ltn" type="term">dardu</foreign>, <foreign xml:lang="Sa-Ltn" type="term">dardū</foreign>) given in Negi (145, II) appear to be Negi’s own translations into Sanskrit from the Tibetan, on the
                             basis of the same definition as given in BGT. </note> is prevalent and where heaps of stones are scattered everywhere; the
