--- a/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
+++ b/translations/kangyur/translations/090-039_toh595-the_usnisavijaya_dharani_with_its_ritual_manual.xml
@@ -25,7 +25,7 @@
         <sponsor xml:id="UT22084-090-039-209">May, George, Li Kai, Lillian Gu</sponsor>
       </titleStmt>
       <editionStmt>
-                <edition>v 1.2.11 <date>2023</date>
+                <edition>v 1.2.13 <date>2023</date>
                 </edition>
             </editionStmt>
       <publicationStmt>
@@ -214,6 +214,12 @@
                 </change>
                 <change who="#sameer" when="2023-08-30T14:48:48.579Z" type="text-version" status="1.2.11" xml:id="UT22084-090-039-257">
                     <desc>Included in App v 3.4</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.2.12" xml:id="UT22084-090-039-258">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-10-23T21:23:45.736Z" type="text-version" status="1.2.13" xml:id="UT22084-090-039-259">
+                    <desc>updated ellipsis.</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -679,7 +685,7 @@
                 with Toh 594 that began with the start of the text ends here (<ref target="http://read.84000.co/translation/toh594.html#UT22084-090-038-49">Toh
                   594</ref>, folio 230.b.6), but further parallels with a different section of <ref target="http://read.84000.co/translation/toh594.html#UT22084-090-038-99">Toh
                   594</ref> (folio 233.b.7) begin again immediately with the line starting “Child of
-                noble family . . .”</note>
+                noble family…”</note>
                         </mantra>
                     </p>
           <milestone unit="chunk" xml:id="UT22084-090-039-53"/>
@@ -1342,8 +1348,8 @@
                         </gloss>
                     </item>
           <item>
-                        <gloss type="person" xml:id="UT22084-090-039-158">
-                            <term type="translationMain">Śakra, Lord of the Gods</term>
+                        <gloss xml:id="UT22084-090-039-158" type="person" mode="match">
+                            <term type="translationMain">Śakra</term>
                             <term xml:lang="Sa-Ltn" type="sourceUnspecified">śakra</term>
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">brgya byin</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">བརྒྱ་བྱིན།</term>
